[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/PauseMenu/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/GreyMask.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="Animation" id=2]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/path = NodePath("GreyMask:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PausePanel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GreyMask:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PausePanel:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.2, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "disappear"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("GreyMask:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PausePanel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="PauseMenu" type="Node"]
script = ExtResource( 1 )

[node name="GreyMask" parent="." instance=ExtResource( 2 )]
modulate = Color( 1, 1, 1, 0 )

[node name="PausePanel" type="Panel" parent="."]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -40.0
margin_right = 60.0
margin_bottom = 38.0
rect_scale = Vector2( 1e-05, 1 )
rect_pivot_offset = Vector2( 60, 40 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="PausePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 24
dragger_visibility = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="PausePanel/VSplitContainer"]
margin_right = 120.0
margin_bottom = 36.0
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="PausePanel/VSplitContainer"]
margin_top = 44.0
margin_right = 120.0
margin_bottom = 78.0
text = "Restart"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "disappear"
anims/appear = SubResource( 2 )
anims/disappear = SubResource( 3 )
[connection signal="pressed" from="PausePanel/VSplitContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PausePanel/VSplitContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
